# study-vipe-coding

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  calculator.py  ci.bat  ci.sh  compose.yaml  coverage.xml  openapi.yaml  package-lock.json  pre-push-hook.sh  prompt.md  pyproject.toml  pytest.ini  requirements.txt  review-001.md  review-002.md  review-003.md  review-004.md  review-010.md  review-011.md  run.bat  run.sh  setup-dev.sh  setup_cloud_run.sh  test_input.txt  test_ui.bat  test_ui.sh
.claude/: settings.json  settings.local.json
.githooks/: pre-commit
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  test.yml  update-coverage.yml
app/: main.py
app/services/: calculator.py  convert.py
app/static/: calculator.css  calculator.js
app/templates/: index.html  index.html-x  result.html
docs/: API.md  ARCHITECTURE.md  BRANCH_PROTECTION.md  CI.md  CONTRIBUTING.md  DEVELOPMENT.md  RELEASE.md  USAGE.md  openapi.yaml  safety-notes.md  spec-acceptance.md  spec-dependencies.md  spec-review-checklist.md  spec-test-requirements.md
scripts/: run_coverage_and_update.sh  update_readme_coverage.py
static/: htmx.min.js
templates/: index.html
tests/: conftest.py  test_api_error_handling.py  test_calculator.py  test_calculator_internal_checks.py  test_calculator_safety.py  test_cors.py  test_coverage_extra.py  test_main_branches.py  test_pow.py  test_rate_limit.py  test_security_headers.py  test_services_calculator.py  test_ui.py
